trustfall_core/src/resources/test_data/parse_errors/nested_type_coercion.parse-error.ron
Err(NestedTypeCoercion(Pos(
  line: 8,
  column: 17,
)))
